--- a/src/main/resources/templates/departamento/cadastro.html
+++ b/src/main/resources/templates/departamento/cadastro.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html
-		xmlns:th="http://www.thymeleaf.org"
-		layout:decorate="~{layout}">
+<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org">
 <head><meta charset="UTF-8"/></head>
 <body>
 	
@@ -23,20 +21,24 @@
 	        </nav>
 	
 	        <div class="container" id="cadastro">
-				<div th:replace="fragments/alert"></div>
-	            <form
-						th:action="${departamento.id == null} ? @{/departamentos/salvar} : @{/departamentos/editar}"
-						th:object="${departamento}" method="POST">
-	                <div class="form-row">
-	                    <div class="form-group col-md-6">
-	                        <label for="nome">Departamento</label>
-	                        <input type="text" class="form-control" id="nome"
-	                               placeholder="Nome Departamento" autofocus="autofocus" th:field="*{nome}"/>
-	                    </div>
-	                </div>
-	                <input type="hidden" id="id" th:field="*{id}"/>
-	                <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-	            </form>
+	        
+	        	<div th:replace="fragments/alert"></div>
+	        	
+				<form th:action="${departamento.id == null} ? @{/departamentos/salvar} : @{/departamentos/editar}" 
+				      th:object="${departamento}" method="POST">
+	        		
+	        		<div th:replace="fragments/validacao :: validacao"></div>
+				    
+				    <div class="form-row">
+				        <div class="form-group col-md-6">
+				            <label for="nome">Departamento</label>
+				            <input type="text" class="form-control" id="nome"
+				                   placeholder="Nome Departamento" autofocus="autofocus" th:field="*{nome}"/>
+				        </div>
+				    </div>
+				    <input type="hidden" id="id" th:field="*{id}"/>
+				    <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+				</form>
 	        </div>
 	    </section>
 </body>
