--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html
-		xmlns:th="http://www.thymeleaf.org"
-		layout:decorate="~{layout}">
+<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org">
 <head><meta charset="UTF-8"/></head>
 <body>
 
@@ -23,36 +21,39 @@
 	        </nav>
 	
 	        <div class="container" id="listagem">
+	
 				<div th:replace="fragments/alert"></div>
+	
 	            <div class="table-responsive">
-	                <table class="table table-striped table-hover table-sm">
-	                    <thead>
-	                    <tr>
-	                        <th>#</th>
-	                        <th>Nome</th>
-	                        <th>Ação</th>
-	                    </tr>
-	                    </thead>
-	                    <tbody>
-							<tr th:each="d : ${departamentos}">
-								<td th:text="${d.id}"></td>
-								<td th:text="${d.nome}"></td>
-								<td colspan="2">
-									<a class="btn btn-info btn-sm" th:href="@{/departamentos/editar/{id} (id=${d.id})}" role="button">
-										<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
-									</a>
-									<button th:id="${'btn_departamentos/excluir/' + d.id}" type="button" class="btn btn-danger btn-sm"
-									data-toggle="modal" data-target="#myModal"
-									>
-										<span class="oi oi-circle-x" title="Exclusão desabilitada" aria-hidden="true"></span>
-									</button>
-								</td>
-							</tr>
-	                    </tbody>
-	                </table>
+					<table class="table table-striped table-hover table-sm">
+					    <thead>
+					    <tr>
+					        <th>#</th>
+					        <th>Nome</th>
+					        <th>Ação</th>
+					    </tr>
+					    </thead>
+					    <tbody>
+					     <tr th:each="d : ${departamentos}">
+					         <td th:text="${d.id}">3</td>
+					         <td th:text="${d.nome}">Administração</td>
+					         <td colspan="2">
+					             <a class="btn btn-info btn-sm" th:href="@{/departamentos/editar/{id} (id=${d.id}) }" role="button">
+					                 <span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
+					             </a>
+					             <button th:id="${ 'btn_departamentos/excluir/' + d.id}" type="button" class="btn btn-danger btn-sm"
+					             		data-toggle="modal" data-target="#myModal">
+					                 <span class="oi oi-circle-x" title="Exclusão desabilitada" aria-hidden="true"></span>
+					             </button>
+					         </td>
+					     </tr>
+					    </tbody>
+					</table>
 	            </div>
 	        </div>
+	        
 			<div th:replace="fragments/modal :: modal"></div>
+			
 	    </section>
 </body>
 </html>		
