--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -33,8 +33,8 @@
 		<section layout:fragment="corpo">
 			<div>conteudo principal das páginas</div>
 		</section>
-	</div>
-	
+	</div>	
+		
 	<footer th:replace="fragments/footer :: rodape">
 		<div>footer</div>
 	</footer>
@@ -47,16 +47,17 @@
 	<script	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
-	    var url = '';
-
-	    $('button[id*="btn_"').click(function () {
-	    	url = "http://localhost:8080/" + $(this).attr('id').split("_")[1];
+	
+		var url = '';
+		
+		$('button[id*="btn_"]').click(function() {
+			url = "http://localhost:8080/" + $(this).attr('id').split("_")[1];
 		});
-
-	    $('#ok_confirm').click(function () {
-	    	document.location.href = url;
+		
+		$('#ok_confirm').click(function() {
+			document.location.href = url;
 		});
-
+	    
 		$(function() {
 			$('[data-toggle="popover"]').popover();
 		});
