--- a/src/main/resources/templates/funcionario/cadastro.html
+++ b/src/main/resources/templates/funcionario/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org">
+<html layout:decorate="~{layout}">
 <head><meta charset="UTF-8"/></head>
 <body>
 	
@@ -14,7 +14,7 @@
 	                        </li>
 	                    </ul>
 	                </div>
-	                <a class="btn btn-primary btn-md" href="@{/funcionarios/listar}" role="button">
+	                <a class="btn btn-primary btn-md" th:href="@{/funcionarios/listar}" role="button">
 	                    <span class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
 	                    <span>Listar Funcionários</span>
 	                </a>
@@ -147,7 +147,7 @@
 	                    </div>
 	                </div>
 	                <input type="hidden" id="id" th:field="*{id}"/>
-					<input type="hidden" id="endereco.id" th:field="*{endereco.id}"/>
+	                <input type="hidden" id="endereco.id" th:field="*{endereco.id}"/>
 	                <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
 	            </form>
 	        </div>
