--- a/src/main/resources/templates/funcionario/lista.html
+++ b/src/main/resources/templates/funcionario/lista.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org">
+<html layout:decorate="~{layout}">
 <head><meta charset="UTF-8"/></head>
 <body>
 
@@ -12,7 +12,7 @@
 	                        <span>Lista de Funcionários</span>
 	                    </li>
 	                </ul>
-	                <a class="btn btn-primary btn-md" href="/funcionarios/cadastrar" role="button">
+	                <a class="btn btn-primary btn-md" th:href="@{/funcionarios/cadastrar}" role="button">
 	                    <span class="oi oi-plus" title="Cadastro" aria-hidden="true"></span>
 	                    <span>Cadastrar Funcionários</span>
 	                </a>
@@ -92,21 +92,22 @@
 	                    <thead>
 	                    <tr>
 	                        <th>#</th>
-	                        <th th:text="#{tabela.funcionario.col.nome}"></th>
-	                        <th th:text="#{tabela.funcionario.col.salario}"></th>
-	                        <th th:text="#{tabela.funcionario.col.departamento}"></th>
-	                        <th th:text="#{tabela.funcionario.col.cargo}"></th>
-	                        <th th:text="#{tabela.funcionario.col.endereco}"></th>
-	                        <th th:text="#{tabela.funcionario.col.dataEntrada}"></th>
-	                        <th th:text="#{tabela.funcionario.col.dataSaida}"></th>
-	                        <th th:text="#{tabela.funcionario.col.acao}"></th>
+	                        <th th:text="#{tabela.funcionario.col.nome}">Nome</th>
+	                        <th th:text="#{tabela.funcionario.col.salario}">Salário</th>
+	                        <th th:text="#{tabela.funcionario.col.departamento}">Departamento</th>
+	                        <th th:text="#{tabela.funcionario.col.cargo}">Cargo</th>
+	                        <th th:text="#{tabela.funcionario.col.endereco}">Endereço</th>
+	                        <th th:text="#{tabela.funcionario.col.dataEntrada}">Data de Entrada</th>
+	                        <th th:text="#{tabela.funcionario.col.dataSaida}">Data de Saída</th>
+	                        <th th:text="#{tabela.funcionario.col.acao}">Ação</th>
 	                    </tr>
 	                    </thead>
 	                    <tbody>
 		                    <tr th:each="f : ${funcionarios}">
 		                        <td th:text="${f.id}">2</td>
 		                        <td th:text="${f.nome}">Ana Maria Lindoval</td>
-		                        <td th:text="|R$ ${{f.salario}}|">R$ 3.560,70</td>
+		                        <td th:text="|R$ ${{f.salario}}|">R$ 3.560,70</td> 
+<!-- 								<td th:text="${#numbers.formatCurrency(f.salario)}">R$ 3.560,70</td> -->
 		                        <td th:text="${f.cargo.departamento.nome}">Administração</td>
 		                        <td th:text="${f.cargo.nome}">Auxiliar Administrativo</td>
 		                        <td>
