--- a/src/main/resources/templates/departamento/cadastro.html
+++ b/src/main/resources/templates/departamento/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org">
+<html layout:decorate="~{layout}">
 <head><meta charset="UTF-8"/></head>
 <body>
 	
@@ -13,7 +13,7 @@
 	                        <span>Cadastrar Departamentos</span>
 	                    </li>
 	                </ul>
-	                <a class="btn btn-primary btn-md" href="/departamentos/listar" role="button">
+	                <a class="btn btn-primary btn-md" th:href="@{/departamentos/listar}" role="button">
 	                    <span class="oi oi-spreadsheet" title="Listar" aria-hidden="true"></span>
 	                    <span>Listar Departamentos</span>
 	                </a>
