--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org">
+<html layout:decorate="~{layout}">
 <head><meta charset="UTF-8"/></head>
 <body>
 
@@ -13,7 +13,7 @@
 	                        <span>Lista de Departamentos</span>
 	                    </li>
 	                </ul>
-	                <a class="btn btn-primary btn-md" href="/departamentos/cadastrar" role="button">
+	                <a class="btn btn-primary btn-md" th:href="@{/departamentos/cadastrar}" role="button">
 	                    <span class="oi oi-plus" title="Cadastro" aria-hidden="true"></span>
 	                    <span>Novo Departamento</span>
 	                </a>
