--- a/src/main/resources/templates/fragments/validacao.html
+++ b/src/main/resources/templates/fragments/validacao.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head><meta charset="UTF-8"></head>
 <body>
  	<div th:if="${#fields.hasAnyErrors()}" th:fragment="validacao">	
